force-app/main/default/objects/Application_Detail__c/Application_Detail__c.object-meta.xml
<CustomObject>
    <description>Use this object to represent both original question-criteria and the applicants response &quot;Answer&quot;.</description>
    <label>Application Detail</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Application Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>