force-app/main/default/objects/Application_Detail__c/fields/Allow_Edit__c.field-meta.xml
<CustomField>
    <fullName>Allow_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Edit</label>
    <type>Checkbox</type>
</CustomField>