force-app/main/default/objects/Application_Detail__c/fields/Child_sObject_Field_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_sObject_Field_Set_API_Name__c</fullName>
    <label>Child sObject Field Set API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>