force-app/main/default/objects/Application_Detail__c/fields/Child_To_Parent_Relationship_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_To_Parent_Relationship_Api_Name__c</fullName>
    <label>Child To Parent Relationship Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>