force-app/main/default/objects/Application_Detail__c/fields/City_Label__c.field-meta.xml
<CustomField>
    <fullName>City_Label__c</fullName>
    <label>City Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>