force-app/main/default/objects/Application_Detail__c/fields/City_Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Target_Field_API_Name__c</fullName>
    <formula>Reference_Application_Detail__r.City_Target_Field_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Target Field API Name</label>
    <type>Text</type>
</CustomField>