force-app/main/default/objects/Application_Detail__c/fields/Country_Label__c.field-meta.xml
<CustomField>
    <fullName>Country_Label__c</fullName>
    <label>Country Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>