force-app/main/default/objects/Application_Detail__c/fields/Display_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Display_Rich_Text__c</fullName>
    <label>Display Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>