force-app/main/default/objects/Application_Detail__c/fields/File_Rename__c.field-meta.xml
<CustomField>
    <fullName>File_Rename__c</fullName>
    <label>File Rename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>