force-app/main/default/objects/Application_Detail__c/fields/Input_City__c.field-meta.xml
<CustomField>
    <fullName>Input_City__c</fullName>
    <label>Input City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>