force-app/main/default/objects/Application_Detail__c/fields/Input_Country__c.field-meta.xml
<CustomField>
    <fullName>Input_Country__c</fullName>
    <label>Input Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>