force-app/main/default/objects/Application_Detail__c/fields/Input_Files_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Input_Files_Uploaded__c</fullName>
    <label>Input Files Uploaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>