force-app/main/default/objects/Application_Detail__c/fields/Input_Number__c.field-meta.xml
<CustomField>
    <fullName>Input_Number__c</fullName>
    <label>Input Number</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>