force-app/main/default/objects/Application_Detail__c/fields/Input_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Input_Postal_Code__c</fullName>
    <label>Input Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>