force-app/main/default/objects/Application_Detail__c/fields/Input_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Input_State_Province__c</fullName>
    <label>Input State / Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>