force-app/main/default/objects/Application_Detail__c/fields/Input_Street__c.field-meta.xml
<CustomField>
    <fullName>Input_Street__c</fullName>
    <label>Input Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>