force-app/main/default/objects/Application_Detail__c/fields/Input_Text__c.field-meta.xml
<CustomField>
    <fullName>Input_Text__c</fullName>
    <label>Input Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>