force-app/main/default/objects/Application_Detail__c/fields/InputOrDisplayClass__c.field-meta.xml
<CustomField>
    <fullName>InputOrDisplayClass__c</fullName>
    <formula>if( CONTAINS(RecordType.DeveloperName, &apos;Input&apos;) || CONTAINS(RecordType.DeveloperName, &apos;Component&apos;), &apos;customInput&apos;, &apos;customDisplay&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InputOrDisplayClass</label>
    <type>Text</type>
</CustomField>