force-app/main/default/objects/Application_Detail__c/fields/Other_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Field_API_Name__c</fullName>
    <label>Other Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>