force-app/main/default/objects/Application_Detail__c/fields/Pass_Application_Id_into_Flow__c.field-meta.xml
<CustomField>
    <fullName>Pass_Application_Id_into_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass Application Id into Flow</label>
    <type>Checkbox</type>
</CustomField>