force-app/main/default/objects/Application_Detail__c/fields/Postal_Code_Label__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Label__c</fullName>
    <label>Postal Code Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>