force-app/main/default/objects/Application_Detail__c/fields/Postal_Code_Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Target_Field_API_Name__c</fullName>
    <formula>Reference_Application_Detail__r.Postal_Code_Target_Field_Api_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code Target Field API Name</label>
    <type>Text</type>
</CustomField>