force-app/main/default/objects/Application_Detail__c/fields/Primary_Search_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Search_Field_API_Name__c</fullName>
    <label>Primary Search Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>