force-app/main/default/objects/Application_Detail__c/fields/Province_Label__c.field-meta.xml
<CustomField>
    <fullName>Province_Label__c</fullName>
    <label>Province Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>