force-app/main/default/objects/Application_Detail__c/fields/Required_Question_Answered__c.field-meta.xml
<CustomField>
    <fullName>Required_Question_Answered__c</fullName>
    <formula>Answer__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Question Answered</label>
    <type>Checkbox</type>
</CustomField>