force-app/main/default/objects/Application_Detail__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <length>10</length>
    <type>Text</type>
</CustomField>