force-app/main/default/objects/Application_Detail__c/fields/Street_Label__c.field-meta.xml
<CustomField>
    <fullName>Street_Label__c</fullName>
    <label>Street Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>