force-app/main/default/objects/Application_Detail__c/recordTypes/Display_Rich_Text.recordType-meta.xml
<RecordType>
    <fullName>Display_Rich_Text</fullName>
    <active>true</active>
    <label>Display Rich Text</label>
</RecordType>