force-app/main/default/objects/Application_Detail__c/recordTypes/Display_Text.recordType-meta.xml
<RecordType>
    <fullName>Display_Text</fullName>
    <active>true</active>
    <label>Display Text</label>
</RecordType>