force-app/main/default/objects/Application_Detail__c/recordTypes/Input_Address.recordType-meta.xml
<RecordType>
    <fullName>Input_Address</fullName>
    <active>true</active>
    <label>Input Address</label>
</RecordType>