force-app/main/default/objects/Application_Detail__c/recordTypes/Input_Currency.recordType-meta.xml
<RecordType>
    <fullName>Input_Currency</fullName>
    <active>true</active>
    <label>Input Currency</label>
</RecordType>