force-app/main/default/objects/Application_Detail__c/recordTypes/Input_Email.recordType-meta.xml
<RecordType>
    <fullName>Input_Email</fullName>
    <active>true</active>
    <label>Input Email</label>
</RecordType>