force-app/main/default/objects/Application_Detail__c/recordTypes/Input_Number.recordType-meta.xml
<RecordType>
    <fullName>Input_Number</fullName>
    <active>true</active>
    <label>Input Number</label>
</RecordType>