force-app/main/default/objects/Application_Detail__c/recordTypes/Input_Picklist.recordType-meta.xml
<RecordType>
    <fullName>Input_Picklist</fullName>
    <active>true</active>
    <label>Input Picklist</label>
</RecordType>