force-app/main/default/objects/Application_Detail__c/recordTypes/Input_Record_List.recordType-meta.xml
<RecordType>
    <fullName>Input_Record_List</fullName>
    <active>true</active>
    <label>Input Record List</label>
</RecordType>