force-app/main/default/objects/Application_Detail__c/recordTypes/Input_Text_Area_Long.recordType-meta.xml
<RecordType>
    <fullName>Input_Text_Area_Long</fullName>
    <active>true</active>
    <label>Input Text Area Long</label>
</RecordType>